# ImageMagick

./: CMakeLists.txt
MagickCore/: CMakeLists.txt  configure.cmake  magick-baseconfig.h.in  source_files.cmake
cmake/: options.cmake
